SERVER-47344 Change agg_merge_upsert_supplied_cluster.js to avoid downgrade to 4.2.1 SERVER-47581 Set 'useNewUpsert' on $mergeCursors aggregations